--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         </activity>
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".SQLiteActivity" />
+        <activity android:name=".wallet.AddWalletActivity"></activity>
     </application>
 
 </manifest>
