--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,7 +58,7 @@
         </activity>
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".SQLiteActivity" />
-        <activity android:name=".wallet.AddWalletActivity"></activity>
+        <activity android:name=".wallet.AddWalletActivity" />
     </application>
 
 </manifest>
