--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -59,6 +60,7 @@
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".SQLiteActivity" />
         <activity android:name=".wallet.AddWalletActivity" />
+        <activity android:name=".expenditure.AddExpenditureActivity"></activity>
     </application>
 
 </manifest>
