--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name=".PreferencesActivity" />
         <activity android:name=".SQLiteActivity" />
         <activity android:name=".wallet.AddWalletActivity" />
-        <activity android:name=".expenditure.AddExpenditureActivity"></activity>
+        <activity android:name=".expenditure.AddExpenditureActivity" />
+        <activity android:name=".wallet.EditWalletActivity"/>
     </application>
 
 </manifest>
