--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
         <activity android:name=".wallet.AddWalletActivity" />
         <activity android:name=".expenditure.AddExpenditureActivity" />
         <activity android:name=".wallet.EditWalletActivity" />
-        <activity android:name=".expenditure.EditExpenditureActivity"></activity>
+        <activity android:name=".expenditure.EditExpenditureActivity" />
+        <activity android:name=".cost_item.AddCostItemActivity"></activity>
     </application>
 
 </manifest>
