--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.shortcuts"
                 android:resource="@xml/shortcuts" />
@@ -33,6 +35,7 @@
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/garbage_widget_info" />
@@ -63,6 +66,8 @@
         <activity android:name=".expenditure.EditExpenditureActivity" />
         <activity android:name=".cost_item.AddCostItemActivity" />
         <activity android:name=".wallet_operation.AddWalletOperationActivity" />
+        <activity android:name=".income_item.AddIncomeItemActivity" />
+        <activity android:name=".income_item.EditIncomeItemActivity"></activity>
     </application>
 
 </manifest>
