Доработана активность редактирования операции между кошельками, теперь можем изменять кошельки. Добавлена активность для выбора кошелька на основе грида RecyclerView.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name=".wallet_operation.AddWalletOperationActivity" />
         <activity android:name=".income_item.AddIncomeItemActivity" />
         <activity android:name=".income_item.EditIncomeItemActivity" />
-        <activity android:name=".wallet_operation.EditWalletOperationActivity"></activity>
+        <activity android:name=".wallet_operation.EditWalletOperationActivity" />
+        <activity android:name=".wallet.SelectWalletActivity"></activity>
     </application>
 
 </manifest>
